third_party/move/move-compiler-v2/tests/lambda/storable/registry_ok.lambda.exp

Diagnostics:
error: duplicate declaration, item, or annotation
  ┌─ tests/lambda/storable/registry_ok.move:4:14
  │
2 │     use std::signer;
  │              ------ Alias previously defined here
3 │     use std::vector;
4 │     use std::signer;
  │              ^^^^^^ Duplicate module alias 'signer'. Module aliases must be unique within a given namespace
